2009-07-10 [colin]	3.7.2cvs7

	* src/plugins/pgpcore/plugin.def
	* src/common/utils.h
		Fix windows port

2009-07-10 [colin]	3.7.2cvs6

	* src/prefs_display_header.c
		Fix bug 1951, 'C-Mail dumps core when editing 
		displayed headers'. Patch by Alexey Rusakov

2009-07-10 [colin]	3.7.2cvs5

	* src/folderview.c
		Fix bug 1952, 'Deleted mails in Queue folder 
		highlight it'.

2009-07-09 [colin]	3.7.2cvs4

	* src/gtk/spell_entry.c
		Fix bug 1949, 'Spell checker doesn't recognise 
		certain word in Subject header, but does in 
		message body'. Patch by Pawel Pekala.

2009-07-09 [paul]	3.7.2cvs3

	* configure.ac
		use pkgconfig to check for the minimum required
		version of GnuTLS

2009-07-06 [colin]	3.7.2cvs2

	* src/prefs_customheader.c
		Fix build failure

2009-07-04 [paul]	3.7.2cvs1

	* tools/claws.i18n.status.pl
		updated

2009-07-03 [paul]	3.7.2

	* NEWS
	* README
	* RELEASE_NOTES	
		3.7.2 released!

2009-07-03 [paul]	3.7.1cvs85

	* AUTHORS
	* configure.ac
	* po/pt_PT.po
	* po/sk.po
	* src/gtk/authors.h
		added new translations by Tiago Faria and Slavko
	* po/bg.po
	* po/cs.po
	* po/de.po
	* po/es.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/id.po
	* po/it.po
	* po/ja.po
	* po/pt_BR.po
	* po/ru.po
		updated by Yasen Pramatarov, David Vachulka, Stephan Sachse,
		Ricardo Mones, Tommi Pirinen, Colin Leroy, Pader Rezso,
		MSulchan Darmawan, Andrea Spadaccini, kazken3, Frederico
		Goncalves Guimaraes, Aleksei Miheev

2009-07-01 [colin]	3.7.1cvs84

	* src/prefs_common.c
		Fix bug 1940, 'Doesn't open links in 
		user's default browser'. Turn the preference
		to TRUE by default; that will only change the
		behaviour for new users.

2009-06-29 [colin]	3.7.1cvs83

	* src/filtering.c
	* src/filtering.h
	* src/prefs_filtering_action.c
		Fix bug 1935, 'problems with very long filtering actions':
		Use a dynamic buffer in action to string, and a bigger
		buffer in string to action

2009-06-29 [colin]	3.7.1cvs82

	* src/matcher_parser_lex.l