@@ -1,3 +1,8 @@
+2009-07-14 [colin]	3.7.2cvs8
+
+	* src/imap.c
+		Fix bug 1954, 'Segfault on reading wrong STATUS'
+
 2009-07-10 [colin]	3.7.2cvs7
 
 	* src/plugins/pgpcore/plugin.def
